gcc/testsuite/g++.dg/overload/defarg9.C
// PR c++/62115

struct A {};
struct B : A {};

struct C
{
  C(A& a = B()) {}		// { dg-error "rvalue" }
};

C c;				// { dg-error "" }
